# heatpump-stats

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  Docker.md  ImplementationSteps.md  Initial thoughts.md  LICENSE  LocalSetup.md  Makefile  PLAN.md  README.md  docker-compose.infra.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  finding_gpro3.md  finding_gpt51.md  finding_gptcdx.md  finding_sonet.md  pyproject.toml  requirements.txt  research_notes.md  setup.py  verify_api.py
.github/: copilot-instructins.md
.github/agents/: code.review.agent.md  git-commit.agent.md  postgres.analyse-dbschema.agent.md  postgres.schema-improvements.agent.md
.github/chatmodes/: git.chatmode.md
.github/features/01_initial_grafana_dashboards/: feat.md  impl.md  plan.md
.github/features/02_backend_configuration/: feat.md  plan.md
.github/prompts/: code.review.prompt.md  git-commit.prompt.md  postgres.analyse-dbschema.prompt.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/heatpump_stats/: config.py
backend/heatpump_stats/adapters/: influxdb.py  mocks.py  shelly.py  sqlite.py  viessmann.py
backend/heatpump_stats/domain/: configuration.py  entities.py  metrics.py
backend/heatpump_stats/entrypoints/: daemon.py
backend/heatpump_stats/entrypoints/api/: dependencies.py  main.py  schemas.py  security.py
backend/heatpump_stats/ports/: config_store.py  heat_pump.py  power_meter.py  repository.py
backend/heatpump_stats/services/: collector.py  reporting.py
backend/tests/: test_config.py
backend/tests/adapters/: test_influxdb.py  test_shelly.py  test_sqlite.py  test_viessmann.py
backend/tests/entrypoints/: __init__.py  test_daemon.py
backend/tests/entrypoints/api/: test_data_endpoints.py  test_dependencies.py  test_main.py  test_security.py
backend/tests/services/: test_collector.py  test_reporting.py
cmd/local-setup/: .env.docker.example  .env.example  docker-compose.infra.yml  docker-compose.local.yml  docker-compose.prod.yml  docker.mk  local.mk
cmd/local-setup/grafana/: Dockerfile
cmd/local-setup/grafana/provisioning/dashboards/: ground-source.json  overview.json  power-energy.json  system-health.json  temperatures.json
cmd/local-setup/grafana/provisioning/datasources/: influxdb.yml
cmd/verify_vicare_caching/: verify_caching.py
cmd/viessmann_api_verify/: .env.example  check_counters.py  check_serial.py  verify_api.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DiffViewer.tsx  Layout.tsx  ProtectedRoute.tsx  StatusWidget.tsx
frontend/src/components/charts/: CircuitChart.tsx  EfficiencyChart.tsx  EnergyChart.tsx  PowerChart.tsx  TemperatureChart.tsx  index.ts  markerUtils.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Changelog.tsx  Dashboard.tsx  History.tsx  Login.tsx
frontend/src/types/: index.ts
src/heatpump_stats/: api.py  cli.py  config.py  heatpump.py  models.py  types.py  viessmann_client.py
tests/: test_api.py  test_models.py  test_viessmann_client.py
