[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Target Python 3.7+
target-version = "py37"
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes ('F'), pycodestyle ('E'), isort ('I'), and more
select = ["E", "F", "I", "W", "C90", "B", "N", "UP"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "F", "I", "W", "C90", "B", "N", "UP"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-third-party = ["PyViCare", "pandas", "matplotlib", "dotenv"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"