[tool.poetry]
name = "heatpump-stats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "heatpump_stats" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
